// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`STextarea.vue can be invalid 1`] = `
<label class="label" for="textarea">
  <div>
    textarea
    <!---->
  </div>
  <div class="textarea__container"><textarea id="textarea" placeholder="" required="required" rows="10" class="textarea textarea--invalid"></textarea>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`STextarea.vue can be required 1`] = `
<label class="label" for="textarea">
  <div>
    textarea
    <!---->
  </div>
  <div class="textarea__container"><textarea id="textarea" placeholder="" required="required" rows="10" class="textarea"></textarea>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`STextarea.vue can have a placeholder 1`] = `
<label class="label" for="textarea">
  <div>
    textarea
    <!---->
  </div>
  <div class="textarea__container"><textarea id="textarea" placeholder="some placeholder" required="required" rows="10" class="textarea"></textarea>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`STextarea.vue can have an icon on the left 1`] = `
<label class="label" for="textarea">
  <div>
    textarea
    <!---->
  </div>
  <div class="textarea__container"><textarea id="textarea" placeholder="" required="required" rows="10" class="textarea textarea--has-icon-left"></textarea> <svg viewBox="0 0 24 24" class="icon textarea__icon textarea__icon--left icon--color-green">
      <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
    </svg>
    <!---->
  </div>
</label>
`;

exports[`STextarea.vue can have an icon on the right 1`] = `
<label class="label" for="textarea">
  <div>
    textarea
    <!---->
  </div>
  <div class="textarea__container"><textarea id="textarea" placeholder="" required="required" rows="10" class="textarea textarea--has-icon-right"></textarea>
    <!----> <svg viewBox="0 0 24 24" class="icon textarea__icon textarea__icon--right icon--color-green">
      <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
    </svg></div>
</label>
`;

exports[`STextarea.vue can hide the optional tag 1`] = `
<label class="label" for="textarea">
  <div>
    textarea
    <!---->
  </div>
  <div class="textarea__container"><textarea id="textarea" placeholder="" rows="10" class="textarea"></textarea>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`STextarea.vue can set each icon color 1`] = `
<label class="label" for="textarea">
  <div>
    textarea
    <!---->
  </div>
  <div class="textarea__container"><textarea id="textarea" placeholder="" required="required" rows="10" class="textarea"></textarea>
    <!---->
    <!---->
  </div>
</label>
`;

exports[`STextarea.vue renders correctly 1`] = `
<label class="label" for="textarea">
  <div>
    textarea
    <!---->
  </div>
  <div class="textarea__container"><textarea id="textarea" placeholder="" required="required" rows="10" class="textarea"></textarea>
    <!---->
    <!---->
  </div>
</label>
`;
